# fake-twitter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  gunicorn.conf.py  hello.py  pyproject.toml
alembic/: env.py
alembic/versions/: 24ca1e7849f0_initial_migration_create_users_and_.py
src/fake_twitter/: __init__.py  config.py  main.py
src/fake_twitter/application/dtos/: __init__.py  tweet_dtos.py  user_dtos.py
src/fake_twitter/application/use_cases/: __init__.py  tweet_use_cases.py  user_use_cases.py
src/fake_twitter/domain/entities/: tweet.py  user.py
src/fake_twitter/domain/repositories/: tweet_repository.py  user_repository.py
src/fake_twitter/infrastructure/api/: __init__.py  dependencies.py
src/fake_twitter/infrastructure/api/v1/: __init__.py
src/fake_twitter/infrastructure/api/v1/routes/: __init__.py  tweets.py  users.py
src/fake_twitter/infrastructure/database/: connection.py  models.py
src/fake_twitter/infrastructure/repositories/: sqlalchemy_tweet_repository.py  sqlalchemy_user_repository.py
tests/integration/: conftest.py  test_tweets_integration.py  test_users_integration.py
